<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:gravity="top">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_add_word_title"
                android:textSize="25sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:background="@drawable/shape_rectangle"
                android:hint="@string/activity_add_word_word_hint"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:gravity="top"
                android:background="@drawable/shape_rectangle"
                android:inputType="textMultiLine"
                android:lines="10"
                android:hint="@string/activity_add_word_description_hint"
                android:digits="@string/Activity_add_word_allowed_digits"/>

            <Button
                android:id="@+id/add_word"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/button_selector"
                android:text="@string/activity_add_word_button_name"
                android:textColor="@color/white"
                android:textStyle="bold"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>