<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:weightSum="10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_main_your_word"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        tools:text="Inexpugnable"
        android:textSize="35sp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activity_main_description_title"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:padding="5dp"
        android:background="@drawable/shape_rectangle"
        tools:text="Que no se deja vencer ni persuadir."
        android:textSize="20sp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/change_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button_selector"
        android:text="@string/activity_main_button_name"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/nolike"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <ImageButton
            android:id="@+id/like"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/arrow_up_float"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/txtlikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/like"
            android:layout_toStartOf="@+id/like"
            android:text="0"
            android:textAlignment="textEnd"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>


</LinearLayout>